<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/main_sort"
        android:orderInCategory="1"
        android:title="@string/sort"
        android:icon="@drawable/ic_outline_arrow_drop_down_24"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/popularity"
                android:orderInCategory="1"
                android:title="@string/popularity"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/top_rated"
                android:orderInCategory="2"
                android:title="@string/top_rated"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/favourite"
                android:title="@string/my_favourite"
                android:orderInCategory="3"
                app:showAsAction="ifRoom"
                />
        </menu>
    </item>
</menu>