<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    android:orientation="vertical"
    tools:context="com.example.popularmovieslibrary.MoviesDetailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_poster_iv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="#616161"
                    android:contentDescription="@string/image_poster"
                    android:scaleType="centerCrop" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/movie_poster_iv"
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="14dp"
                        android:layout_marginLeft="14dp"
                        android:contentDescription="@string/image_poster" />

                    <LinearLayout
                        android:layout_width="211dp"
                        android:layout_height="193dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/movie_poster_iv"
                        android:layout_toRightOf="@id/movie_poster_iv"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/view_background"
                            android:padding="2dp"
                            android:text="@string/title"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="6dp"
                            android:textColor="#F5F5F5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/view_background"
                            android:padding="4dp"
                            android:text="@string/release_date"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_release"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="#F5F5F5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/view_background"
                            android:padding="4dp"
                            android:text="@string/user_rating"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="4dp"
                            android:textColor="#F5F5F5"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/movie_poster_iv"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/view_background"
                        android:padding="4dp"
                        android:text="@string/plot_synopsis"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="240dp"
                        android:background="#757575" />

                    <TextView
                        android:id="@+id/plot_synopsis_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/movie_poster_iv"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="40dp"
                        android:gravity="center_horizontal"
                        android:textColor="#BDBDBD"
                        android:textSize="20sp" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:background="#F5F5F5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="8dp"
                        android:text="@string/watch_trailer"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="#F5F5F5"
                        android:layout_alignParentRight="true" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/trailer_load_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/load5" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trailer_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/movie_reviews"
                    android:textColor="#F5F5F5"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/review_load_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/load5" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviews_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/set_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_baseline_stars_24"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>

